--- a/Templates/result.html
+++ b/Templates/result.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Obesity Classification Result</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f5f5f5;
-        }
-
-        h1 {
-            text-align: center;
-            color: #333333;
-        }
-
-        h3 {
-            margin-top: 30px;
-            color: #333333;
-        }
-
-        .result {
-            text-align: center;
-            font-size: 20px;
-            margin-top: 10px;
-            padding: 10px;
-            background-color: #ffffff;
-            border-radius: 5px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-    </style>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Food Delivery Time</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                text-align: center;
+                background-color: #f7f7f7;
+                margin: 0;
+                padding: 0;
+            }
+            .container {
+                max-width: 600px;
+                margin: 0 auto;
+                padding: 20px;
+                background-color: #fff;
+                border-radius: 10px;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            }
+            h1 {
+                color: #f58220;
+                font-size: 36px;
+            }
+            h2 {
+                color: #333;
+                font-size: 24px;
+            }
+        </style>
+    </head>
 <body>
+    <div class="container">
     <h1>Obesity Classification Result</strong></h1>
-    <h3><strong>Predicted Class:</strong></h3>
-    <div class="result"><strong>{{ final_result }}</strong></div>
+        <h3><strong>Predicted Class:</strong></h3>
+        <div class="result"><strong>{{ final_result }}</strong></div>
+    </div>
 
 </body>
 </html>
